--- a/beginner.html
+++ b/beginner.html
@@ -22,7 +22,7 @@
                     <li><a href="beginner.html">BEGINNER</a></li>
                     <li><a href="intermediate.html">INTERMEDIATE</a></li>
                     <li><a href="advance.html">ADVANCED</a></li>
-                    <li><a href="shop.html">SHOP</a></li>                
+                    <li><a href="https://speedcubeshop.com/">SHOP</a></li>                   
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
